--- a/lambda/package.json
+++ b/lambda/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "aws-sdk": "^2.945.0",
     "newman": "^5.2.4",
+    "newman-reporter-htmlextra": "^1.22.4",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
