--- a/lambda/package.json
+++ b/lambda/package.json
@@ -18,7 +18,8 @@
     "aws-sdk": "^2.945.0",
     "newman": "^5.2.4",
     "newman-reporter-htmlextra": "^1.22.4",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.22.1"
