--- a/lambda/package.json
+++ b/lambda/package.json
@@ -19,7 +19,8 @@
     "newman": "^5.2.4",
     "newman-reporter-htmlextra": "^1.22.4",
     "node-fetch": "^2.6.1",
-    "newman-reporter-junitfull": "^1.1.1"
+    "newman-reporter-junitfull": "^1.1.1",
+    "adm-zip": "^0.5.9"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.22.1"
