--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
+examples/test_framework/.terraform.lock.hcl
+tests/go.mod
+tests/go.sum
