--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ override.tf.json
 # example: *tfplan*
 
 examples/test_framework/.terraform.lock.hcl
-tests/go.mod
-tests/go.sum
+#tests/go.mod
+#tests/go.sum
 tests/reports/*
 tests/cover.go
